@@ -10,10 +10,15 @@ pluginlib_LTLIBRARIES = \
 	libwaveformmanagement.la
 
 libwaveformmanagement_la_SOURCES = \
+	mediadecoder.h \
+	waveformgenerator.cc \
 	waveformmanagement.cc
 
 libwaveformmanagement_la_LDFLAGS = $(PLUGIN_LIBTOOL_FLAGS)
-libwaveformmanagement_la_LIBADD = $(SUBTITLEEDITOR_LIBS) -L$(top_srcdir)/src -lsubtitleeditor
+libwaveformmanagement_la_LIBADD = \
+	$(SUBTITLEEDITOR_LIBS) \
+	$(GSTREAMER_LIBS) \
+	-L$(top_srcdir)/src -lsubtitleeditor
 
 plugindescription_in_files = waveformmanagement.se-plugin.in
 plugindescription_DATA = $(plugindescription_in_files:.se-plugin.in=.se-plugin)
